2001-11-26  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: remove gsm-protocol.c rule.

	* main.c: (set_lang): warning fix.

Mon, 19 Nov 2001 01:25:40 -0500 Frank Belew <frb@ximian.com>

	* Makefile.am: added gsm-marshal.list to EXTRA_DIST
	* gnome-login-check.c, main.c, save-session.c,
	  session-properties-capplet.c, session-properties.c:
	  replaced PACKAGE with GETTEXT_PACKAGE on all
          calls to bindtextdomain and textdomain

2001-11-12  Frank Belew <frb@ximian.com>
	
	* Makefile.am: comment out SUBDIRS entirely, or Makefiles break

2001-11-03  Glynn Foster <glynn.foster@sun.com> 

	* main.c: Align with the gnome_client_get_destop_id in libgnomeui
	for the global session ID. GNOME_DESKTOP_SESSION_ID. 

2001-10-31 Stephen Browne <stephen.browne@sun.com>

	* splash.c: removed hint() and calls to it.

2001-09-21  jacob berkman  <jacob@ximian.com>

	* splash-test.c: small program to debug the splash screen

2001-09-20  jacob berkman  <jacob@ximian.com>

	* gsm-client-list.c (gsm_client_list_new): #if 0 out some code
	which doesn't seem to affect anything and uses style->font

	* Makefile.am (LDADD): link against -lwrap when we are supposed to

2001-09-12  jacob berkman  <jacob@ximian.com>

	* session-properties-capplet.c (main):
	* main.c (main):
	* save-session.c (main): re-enable window icon code

	* ice.c (accept_connection): do a better fix for the deadlock

	* Makefile.am: cleanup a bit

	* splash.c: pass an extra NULL to gdk_pixbuf_new_from_file()

	* session-properties-capplet.c (main):
	* main.c (main):
	* save-session.c (main): comment out window icon code until it
	gets back in

	* main.c (main): remove gnomelib_init() call; it was just a
	workaround for a bug in gnome-libs 1.x

	* logout.c (display_gui): temporarily comment out help code

	* ice.c (accept_connection): wrap the gtk_main_iteration() call
	with gdk_threads_enter()/_leave() so we don't lock up

	* gsm-client-row.c (create_stock_menu_pixmaps): this is broken,
	but it compiles now
